<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pocket Library - PoLi</string>
    <string name="action_settings">Settings</string>
    <string name="menuitem_newuser">New user</string>
    <string name="menuitem_mainmenu">Main menu</string>
    <string name="menuitem_heat">Toggle Heat</string>
    <string name="menuitem_user_profile">Goto User Profile</string><string name="menuitem_search">Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_header">Welcome to AgileGroup4Life\'s Pocket Library. Please enter your username to login.</string>
    <string name="text_login_username">Login - Pocket Library</string>
    <string name="button_login">login</string>
    <string name="title_activity_question_overview">Question Overview</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="button_users">Users</string>
    <string name="button_questions">Newsfeed</string>
    <string name="button_tags">Tags</string>
    <string name="button_search">Search</string>
    <string name="button_profile">Profile</string>
    <string name="button_settings">Settings</string>
    <string name="title_activity_user_profile">User Profile</string>
    <string name="title_activity_users">Users</string>
    <string name="title_activity_question">Question</string>
    <string name="title_activity_tags_overview">Tags Adventure</string>
    <string name="title_activity_settings">Settings</string>
    <string name="button_logout">Logout</string>
    <string name="search_hint">Search questions by freetext or tag</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="button_filter1">Latest</string>
    <string name="button_filter2">Important</string>
    <string name="button_filter3">Answered</string>
    <string name="button_heat">Heat</string>
    <string name="title_activity_comments">Comments</string>
    <string name="title_activity_custom_title_bar">CustomTitleBarActivity</string>
    <string name="headerImageContentDesc">This is an header image for Pocket Library</string>
    <string name="customTitleBarHeaderDefault">Pocket Library</string>

  	<color name="titlebackgroundcolor">#3232CD</color>
    <color name="titletextcolor">#FFFF00</color>
    <string name="comments_button">Goto User</string>
    
    <string name="userCreatedHeader">Registrated:</string>
    <string name="userLocationHeader">Location:</string>
    <string name="userLastSeenHeader">Last seen:</string>
</resources>