<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    

    <Button
        android:id="@+id/button_users"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_users"
        android:onClick="handleMenuItemOnClick" />
     <Button
        android:id="@+id/button_questions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_questions"
        android:onClick="handleMenuItemOnClick" />
     <Button
        android:id="@+id/button_tags"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_tags"
        android:onClick="handleMenuItemOnClick" />
     <Button
        android:id="@+id/button_profile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_profile"
        android:onClick="handleMenuItemOnClick" />
     <Button
        android:id="@+id/button_settings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_settings"
        android:onClick="handleMenuItemOnClick" />
      <Button
        android:id="@+id/button_search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_search"
        android:onClick="handleMenuItemOnClick" />
     <Button
        android:id="@+id/button_logout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_logout"
        android:onClick="handleMenuItemOnClick" />
     
    
</LinearLayout>