<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionOverviewActivity" >

    <LinearLayout android:id="@+id/footer" android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:orientation="horizontal"
    android:layout_alignParentTop="true" style="@android:style/ButtonBar">

    <Button android:id="@+id/latestButton" android:layout_width="0dp"
        android:layout_height="wrap_content" android:layout_weight="1"
        android:text="@string/button_filter1" android:textSize="12dip"
		android:onClick="filterLatest" android:textColor="#040404"
        android:typeface="sans"	/>

    <Button android:id="@+id/importantButton" android:layout_width="0dp"
        android:layout_height="wrap_content" android:layout_weight="1"
        android:text="@string/button_filter2" android:textSize="12dip"
        android:onClick="filterImportant" android:textColor="#040404"
        android:typeface="sans" />
    
    <Button android:id="@+id/answeredButton" android:layout_width="0dp"
        android:layout_height="wrap_content" android:layout_weight="1"
        android:text="@string/button_filter3" android:textSize="12dip"
        android:onClick="filterAnswers" android:textColor="#040404"
        android:typeface="sans" />
    
    <Button android:id="@+id/heatButton" android:layout_width="0dp"
        android:layout_height="wrap_content" android:layout_weight="1"
        android:text="@string/button_heat" android:textSize="12dip"
        android:onClick="handleHeatOnClick" android:textColor="#040404"
        android:typeface="sans" />
	</LinearLayout>
    
    <ListView
        android:id="@+id/listview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:divider="#b5b5b5"
        android:dividerHeight="1dp"
        android:listSelector="@drawable/list_selector"
        android:layout_below="@+id/footer" />    

</RelativeLayout>